envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: backend_server
                  virtual_hosts:
                    - name: backend_server_hosts
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: backend-server-service
                            timeout: 15s
                            cors:
                              allow_origin_string_match:
                                - safe_regex:
                                    google_re2: {}
                                    regex: \*
                              allow_methods: "GET"
                        - match:
                            prefix: /getProfile
                          route:
                            cluster: backend-server-service
                            timeout: 15s
                            cors:
                              allow_origin_string_match:
                                - contains: tabd2aee2.azurewebsites.net
                              allow_methods: "POST"
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        entra:
                          issuer: "https://sts.windows.net/f1bad6f6-0f8e-4b85-b5f0-11ea3613879e/"
                          audiences:
                            - "api://tabd2aee2.azurewebsites.net/9bb6b650-9e82-449a-80e5-6c680061bbe2"
                          remote_jwks:
                            http_uri:
                              uri: "https://login.microsoftonline.com/f1bad6f6-0f8e-4b85-b5f0-11ea3613879e/discovery/v2.0/keys"
                              cluster: entra
                              timeout: 5s
                      rules:
                        - match:
                            prefix: /getProfile
                            headers:
                              - name: ":method"
                                string_match: { exact: "POST" }
                          requires:
                            provider_name: entra
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend-server-service
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: backend-server-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 5000
    - name: entra
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: entra
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: login.microsoftonline.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
